<resources>
    <string name="txtAppname">Montaigne - Ensaios Práticos</string>
    <string name="TxtMainBoasvindas">Bem vindos(a)!</string>
    <string name="TxtHomeTipdensaioStr">TIPOS DE ENSAIOS:</string>
    <string name="TxtHomeSptnameStr">SPT-Ensaio de simples reconhecimento</string>
    <string name="TxtMainToqueNtela">Toque na tela para abrir</string>
    <string name="TxtSobreEmailappStr">montaigne.ensaios@protonmail.com</string>
    <string name="TxtSobreTituloStr">Sobre nós</string>
    <string name="TxtSobreDesenvolvedoreStr">O aplicativo foi desenvolvido por Anny Thaymara De Sousa Miranda, Ícaro Bruno Silbe Cortês, Júlia Mariana Dos Santos Freire, Nicole Dantas Lopes e Rodrigo Oliveira Lourenço.</string>
    <string name="TxtSobreEntrcotatoStr">Para entrar em contato conosco,  envie um e-mail para:montaige.ensaios@prontomail.com</string>
    <string name="TxtHomeMeusprojetosStr">MEUS PROJETOS:</string>
    <string name="TxtSptCriarSegmentosAmstraStr">Segmentos</string>
    <string name="BntSptNFuroIniciaEnsaioTxt">Iniciar Ensaio</string>
    <string name="TxtSptCriarPenetraçãoStr">Penetração</string>
    <string name="TxtSptCriarGolpesStr">Golpes</string>
    <string name="TxtSptcriarProfundidadeStr">Profundidade:</string>
    <string name="TxtSptEditarProfundidadeStr">Profundidade</string>
    <string name="TxtSptEditarPenetraçãoStr">Penetração</string>
    <string name="TxtSptEditarGolpesStr">Golpes</string>
    <string name="TtSptEditarNameprojetoStr">Nome do projeto: *</string>
    <string name="TxtSptEditarDatainicioStr">Data de inicio: *</string>

    <string name="TxtSptDadosFuroDatainicioStr">Data de inicio: *</string>
    <string name="TxtSptDadosFuroCodernadasFuroN">Coordernadas do Furo N: *</string>
    <string name="TxtSptDadosFuroNvdFuroStr">Nível do Furo N: *</string>
    <string name="BntSptDadosFuroCapturarLocalStr"> Capturar Localização</string>

    <string name="TxtSptCarimboDefNameprojetoStr">Nome do Projeto: *</string>
    <string name="TxtSptCarimboDefDatainicioStr">Data de inicio: *</string>
    <string name="TxtSptCarimboDefEmpresaStr">Empresa: *</string>
    <string name="TxtSptCarimboDefContatoStr">Contato:</string>
    <string name="TxtSptCarimboDefNmtecncStr">Nome do Técnico: *</string>
    <string name="TxtSptCarimboDefNmclienteStr">Nome do Cliente: *</string>
    <string name="TxtSptCarimboDefNmrsdfuroStr">Quantidade de Furos: *</string>
    <string name="TxtSptCarimboDefLocalsondagemStr">Local da obra: *</string>
    <string name="TxtSptCarimboDefAvisoSvAutom">Alterações salvas automaticamente!</string>
    <string name="BntSptCarimboDefContinuação">Continuação </string>
    <string name="TxtSptCarimboDefTextObrigatorioStr">Os campos indicados com * são obrigatórios</string>
    <string name="TxtSptCarimboDefRefdnivelStr">Referência de Nível: *</string>



    <string name="TxtSptEditarDatfinalStr">Data Final: *</string>
    <string name="TxtSptEditarRefdnivelStr">Referência de Nível: *</string>
    <string name="TxtSptEditarNvdfuroStr">Nível do Furo N: *</string>
    <string name="TxtSptEditarNSPTStr">NSPT</string>
    <string name="TxtSptCriarNvaguaStr">Nivel de água(m):</string>
    <string name="TxtSptEditarNvaguaStr">Nivel de água(m):</string>
    <string name="EditTextHintSptcriarNvagua">Nível de água</string>
    <string name="BtnSPTCriarFinlzaEnsStr">Finalizar ensaio</string>
    <string name="BtnSptProjetoAlteracarimboStr">Carimbo</string>
    <string name="BntSPTEditarGerarelatorioStr">Gerar Relatorio</string>
    <string name="BntSptcriarPrxamtraStr">Próxima amostra</string>
    <string name="TxtSptNFuroTextObrigatorioStr">Os campos indicados com * são obrigatórios</string>


</resources>