<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.SPTCarimboDef">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/TollbarSptCarimboDef"
        android:layout_width="440dp"
        android:layout_height="74dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCarimboDefinitivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Carimbo Definitivo"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSPTCarimboDefBack"
        android:layout_width="43dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:background="@color/transparente"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/txtCarimboDefinitivo"
        app:layout_constraintEnd_toStartOf="@+id/txtCarimboDefinitivo"
        app:layout_constraintTop_toTopOf="@+id/txtCarimboDefinitivo"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/btnSPTCarimboDefSalvar"
        android:layout_width="26dp"
        android:layout_height="33dp"
        android:layout_marginEnd="20dp"
        android:background="@color/transparente"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/txtCarimboDefinitivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCarimboDefinitivo"
        app:layout_constraintVertical_bias="0.96"
        app:srcCompat="@drawable/ic_salvar"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/imgBntHome1"
        android:layout_width="50dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:background="@color/transparente"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/fieldSPTCarimboDefProx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fieldSPTCarimboDefProx"
        app:srcCompat="@drawable/ic_home" />

    <Button
        android:id="@+id/fieldSPTCarimboDefProx"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/BntSptCarimboDefContinuação"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/ScrollViewSptCarimboDef"
        android:layout_width="391dp"
        android:layout_height="570dp"
        app:layout_constraintBottom_toBottomOf="@+id/fieldSPTCarimboDefTecnico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TollbarSptCarimboDef">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtAvisoAlterAutomatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/TxtSptCarimboDefAvisoSvAutom"
                android:textColor="@color/principal"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="92dp" />

            <ImageButton
                android:id="@+id/imgbntHelpNomedTecnic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparente"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_help"
                tools:layout_editor_absoluteX="348dp"
                tools:layout_editor_absoluteY="604dp" />

            <TextView
                android:id="@+id/textAvisoObrigatorio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/TxtSptCarimboDefTextObrigatorioStr"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="600dp" />

            <TextView
                android:id="@+id/TxtSptCarimboDefNmProjt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/TxtSptCarimboDefNameprojetoStr"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="265dp" />

            <TextView
                android:id="@+id/TxtSptCarimboDefEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/TxtSptCarimboDefEmpresaStr"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteY="185dp" />

            <TextView
                android:id="@+id/TxtSptCarimboDefNmtecnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/TxtSptCarimboDefNmtecncStr"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteY="240dp" />

            <EditText
                android:id="@+id/fieldSPTCarimboDefNome"
                style="@style/Edit_Text"
                android:layout_width="290dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:drawableRight="@drawable/ic_edit"
                android:ems="10"
                android:hint="string/nome"
                android:inputType="textPersonName"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="470dp" />

            <EditText
                android:id="@+id/fieldSPTCarimboDefEmpresa"
                style="@style/Edit_Text"
                android:layout_width="290dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:drawableRight="@android:drawable/btn_dialog"
                android:ems="10"
                android:hint="string/empresa1"
                android:inputType="textPersonName"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="313dp" />

            <EditText
                android:id="@+id/fieldSPTCarimboDefTecnico"
                style="@style/Edit_Text"
                android:layout_width="290dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:drawableRight="@android:drawable/btn_dialog"
                android:ems="10"
                android:hint="string/nomedotecnico"
                android:inputType="textPersonName"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="381dp" />

            <ImageView
                android:id="@+id/imgSPTCarimboDefImg"
                android:layout_width="169dp"
                android:layout_height="144dp"
                android:background="@color/cinza"
                app:srcCompat="@drawable/ic_perfil"
                app:tint="@color/white"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="62dp" />

            <ImageButton
                android:id="@+id/imgbntPorFotoLogo"
                :tint="@color/black"
                android:layout_width="43dp"
                android:layout_height="38dp"
                android:background="@color/transparente"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_add_image" />

            <ImageButton
                android:id="@+id/imgbntHelpEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparente"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_help"
                tools:layout_editor_absoluteX="348dp" />

            <EditText
                android:id="@+id/fieldSPTCarimboDefDataIni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="data de inicio"
                tools:layout_editor_absoluteX="210dp" />

            <EditText
                android:id="@+id/fieldSPTCarimboDefTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Telefone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/fieldSPTCarimboDefCli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Cliente"
                tools:layout_editor_absoluteX="210dp" />

            <EditText
                android:id="@+id/fieldSPTCarimboDefNFuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="Número de furos"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="433dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>