<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SPTCriar"
    tools:layout_editor_absoluteX="134dp"
    tools:layout_editor_absoluteY="4dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-55dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/BntSptCriarFinalizarEnsaio"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-medium"
                android:padding="5dp"
                android:text="@string/BtnSPTCriarFinlzaEnsStr"
                android:textAllCaps="true"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="593dp" />

            <ImageButton
                android:id="@+id/bntSptCriarHome"
                android:layout_width="50dp"
                android:layout_height="38dp"
                android:background="@color/transparente"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_home"
                tools:layout_editor_absoluteX="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/TxtSptCriarNdagua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/TxtSptCriarNvaguaStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/TxtSptCriarTitulodFuro"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/BntSPTCriarBackCrbUnico"
        app:layout_constraintTop_toBottomOf="@+id/TxtSptCriarTitulodFuro" />

    <TextView
        android:id="@+id/TxtSptCriarProfdadAmostr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/TxtSptcriarProfundidadeStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/TxtSptCriarTitulodAmostraN"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TxtSptCriarTitulodAmostraN"
        app:layout_constraintTop_toBottomOf="@+id/TxtSptCriarTitulodAmostraN" />

    <TextView
        android:id="@+id/TxtSptCriarSegmentAmtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/TxtSptCriarSegmentosAmstraStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/TxtSptCriarTitulodAmostraN"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TxtSptCriarTitulodAmostraN"
        app:layout_constraintTop_toBottomOf="@+id/TxtSptCriarTitulodAmostraN" />

    <TextView
        android:id="@+id/TxtSptCriarGolpes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/TxtSptCriarGolpesStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/TxtSptCriarPenetraçPGolpe"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/TxtSptCriarSegmentAmtra"
        app:layout_constraintTop_toBottomOf="@+id/TxtSptCriarTitulodAmostraN" />

    <TextView
        android:id="@+id/TxtSptCriarPenetraçPGolpe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/TxtSptCriarPenetraçãoStr"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/TxtSptCriarGolpes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TxtSptCriarGolpes" />

    <TextView
        android:id="@+id/TxtSptCriarTitulodAmostraN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Amostra N"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/TxtSptCriarNdagua"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bntSptCriarHelpNvagua"
        app:layout_constraintTop_toBottomOf="@+id/fieldSPTCriarNvdAgua" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/TollbarSptCriar"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TxtSptCriarTitulodFuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Furo N- SP0N"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/BntSPTCriarBackCrbUnico"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/transparente"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/TxtSptCriarTitulodFuro"
        app:layout_constraintEnd_toStartOf="@+id/TxtSptCriarTitulodFuro"
        app:layout_constraintTop_toTopOf="@+id/TxtSptCriarTitulodFuro"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/fieldSPTCriarNvdAgua"
        style="@style/Edit_Text"
        android:layout_width="290dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/ic_edit"
        android:ems="10"
        android:hint="Nivel de água"
        android:inputType="number"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/TxtSptCriarNdagua"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bntSptCriarHelpNvagua"
        app:layout_constraintTop_toBottomOf="@+id/TxtSptCriarNdagua" />

    <EditText
        android:id="@+id/fieldSPTCriarProfdadeAmstr"
        style="@style/Edit_Text"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:drawableRight="@drawable/ic_edit"
        android:ems="10"
        android:hint="hint"
        android:inputType="number"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/TxtSptCriarProfdadAmostr"
        app:layout_constraintStart_toEndOf="@+id/TxtSptCriarProfdadAmostr"
        app:layout_constraintTop_toTopOf="@+id/TxtSptCriarProfdadAmostr" />

    <EditText
        android:id="@+id/fieldSPTCriarGlp1"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="0"

        android:inputType="number"
        android:maxLength="4"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="@+id/TxtSptCriarGolpes"
        app:layout_constraintStart_toStartOf="@+id/TxtSptCriarGolpes"
        app:layout_constraintTop_toBottomOf="@+id/TxtSptCriarGolpes" />

    <EditText
        android:id="@+id/fieldSPTCriarPen1"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/edit_text"

        android:ems="10"
        android:hint="15"
        android:inputType="number"
        android:maxLength="4"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="@+id/TxtSptCriarPenetraçPGolpe"
        app:layout_constraintStart_toStartOf="@+id/TxtSptCriarPenetraçPGolpe"
        app:layout_constraintTop_toBottomOf="@+id/TxtSptCriarPenetraçPGolpe" />

    <EditText
        android:id="@+id/fieldSPTCriarPen2"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/edit_text"

        android:ems="10"
        android:hint="15"
        android:inputType="number"
        android:maxLength="4"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="@+id/fieldSPTCriarPen1"
        app:layout_constraintStart_toStartOf="@+id/fieldSPTCriarPen1"
        app:layout_constraintTop_toBottomOf="@+id/fieldSPTCriarPen1" />

    <EditText
        android:id="@+id/fieldSPTCriarPen3"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"

        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="15"
        android:inputType="number"
        android:maxLength="4"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="@+id/fieldSPTCriarPen2"
        app:layout_constraintStart_toStartOf="@+id/fieldSPTCriarPen2"
        app:layout_constraintTop_toBottomOf="@+id/fieldSPTCriarPen2" />

    <EditText
        android:id="@+id/fieldSPTCriarGlp2"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:maxLength="4"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="@+id/fieldSPTCriarGlp1"
        app:layout_constraintStart_toStartOf="@+id/fieldSPTCriarGlp1"
        app:layout_constraintTop_toBottomOf="@+id/fieldSPTCriarGlp1" />

    <EditText
        android:id="@+id/fieldSPTCriarGlp3"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:maxLength="4"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="@+id/fieldSPTCriarGlp2"
        app:layout_constraintStart_toStartOf="@+id/fieldSPTCriarGlp2"
        app:layout_constraintTop_toBottomOf="@+id/fieldSPTCriarGlp2" />

    <ImageButton
        android:id="@+id/bntSptCriarHelpNvagua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@color/transparente"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/TxtSptCriarNdagua"
        app:layout_constraintEnd_toStartOf="@+id/TxtSptCriarNdagua"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="@+id/BntSPTCriarBackCrbUnico"
        app:layout_constraintTop_toTopOf="@+id/TxtSptCriarNdagua"
        app:srcCompat="@drawable/ic_help" />

    <ImageButton
        android:id="@+id/btnSPTCriarp1"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_adicionar"
        app:layout_constraintBottom_toBottomOf="@+id/fieldSPTCriarGlp1"
        app:layout_constraintStart_toEndOf="@+id/fieldSPTCriarGlp1"
        app:layout_constraintTop_toTopOf="@+id/fieldSPTCriarGlp1"
        app:tint="@color/transparente" />

    <ImageButton
        android:id="@+id/btnSPTCriarp2"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_adicionar"
        app:layout_constraintBottom_toBottomOf="@+id/fieldSPTCriarGlp2"
        app:layout_constraintStart_toEndOf="@+id/fieldSPTCriarGlp2"
        app:layout_constraintTop_toTopOf="@+id/fieldSPTCriarGlp2"
        app:tint="@color/transparente" />

    <ImageButton
        android:id="@+id/btnSPTCriarp3"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_adicionar"
        app:layout_constraintBottom_toBottomOf="@+id/fieldSPTCriarGlp3"
        app:layout_constraintStart_toEndOf="@+id/fieldSPTCriarGlp3"
        app:layout_constraintTop_toTopOf="@+id/fieldSPTCriarGlp3"
        app:tint="@color/transparente" />

    <ImageButton
        android:id="@+id/btnSPTCriarm1"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_menos"
        app:layout_constraintBottom_toBottomOf="@+id/fieldSPTCriarGlp1"
        app:layout_constraintEnd_toStartOf="@+id/fieldSPTCriarGlp1"
        app:layout_constraintTop_toTopOf="@+id/fieldSPTCriarGlp1"
        app:tint="@color/transparente" />

    <ImageButton
        android:id="@+id/btnSPTCriarm2"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_menos"
        app:layout_constraintBottom_toBottomOf="@+id/fieldSPTCriarGlp2"
        app:layout_constraintEnd_toStartOf="@+id/fieldSPTCriarGlp2"
        app:layout_constraintTop_toTopOf="@+id/fieldSPTCriarGlp2"
        app:layout_constraintVertical_bias="0.25"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/btnSPTCriarm3"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_menos"
        app:layout_constraintBottom_toBottomOf="@+id/fieldSPTCriarGlp3"
        app:layout_constraintEnd_toStartOf="@+id/fieldSPTCriarGlp3"
        app:layout_constraintTop_toTopOf="@+id/fieldSPTCriarGlp3"
        app:tint="@color/transparente" />

    <ImageButton
        android:id="@+id/BntSptCriarSalvarFuro"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="110dp"
        android:background="@color/transparente"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/TxtSptCriarTitulodFuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TxtSptCriarTitulodFuro"
        app:layout_constraintTop_toTopOf="@+id/TxtSptCriarTitulodFuro"
        app:srcCompat="@drawable/ic_salvar"
        app:tint="@color/white" />

    <Button
        android:id="@+id/bntSptCriarProxAmostra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BntSptcriarPrxamtraStr"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:backgroundTint="@color/marrom"
        app:layout_constraintEnd_toStartOf="@+id/TxtSptCriarGolpes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TxtSptCriarSegmentAmtra"
        tools:layout_editor_absoluteY="604dp" />

    <ImageView
        android:id="@+id/ImgViewSptCriarIlustrativo"
        android:layout_width="50dp"
        android:layout_height="43dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/bntSptCriarProxAmostra"
        app:layout_constraintStart_toEndOf="@+id/bntSptCriarProxAmostra"
        app:layout_constraintTop_toTopOf="@+id/bntSptCriarProxAmostra"
        app:layout_constraintVertical_bias="0.541"
        app:srcCompat="@drawable/ic_proxima_amotra" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:text="2"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:text="3"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:text="1"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/TxtSptCriarSegmentAmtra"
        app:layout_constraintStart_toStartOf="@+id/TxtSptCriarSegmentAmtra"
        app:layout_constraintTop_toBottomOf="@+id/TxtSptCriarSegmentAmtra" />

</androidx.constraintlayout.widget.ConstraintLayout>